[project]
name = "cc-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "deepspeed>=0.16.9",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "wordcloud>=1.9.4",
]
